overlapping issue solved + text made clickable

--- a/src/App.scss
+++ b/src/App.scss
@@ -1426,7 +1426,7 @@ footer {
 }
 
 /* For the iPhone X folks OMG WHY ARE YOUR SCREENS SO NARROW T_T */
-@media (max-width: 375px) {
+@media (max-width: 410px) {
   .timeseries-mode {
     display: block !important;
     width: 4.25rem;
